Add app icons and remove version from website
Generate icon.ico, icon.icns, icon.png from logo for all platforms.
Restore icon references in electron-builder config.
Remove hardcoded version numbers from landing page.

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -63,7 +63,7 @@
           View on GitHub
         </a>
       </div>
-      <p class="hero-version">v1.1.0 &middot; Windows, macOS & Linux</p>
+      <p class="hero-version">Windows, macOS & Linux</p>
     </div>
 
     <div class="hero-visual reveal reveal-delay-1">
@@ -400,7 +400,7 @@
             View on GitHub
           </a>
         </div>
-        <span class="download-version">v1.1.0</span>
+        <span class="download-version">Free &middot; Open Source</span>
       </div>
     </div>
   </section>
